# musicgen-api

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.budget-gpu.yml  docker-compose.cpu.yml  docker-compose.yml  generate_soundtracks.py  pyproject.toml  requirements.txt  run_local.sh  test_local.sh
.githooks/: pre-push
.github/: CODEOWNERS
.github/workflows/: ci.yaml  pr-title.yaml  release-please-ci.yaml  release-please.yaml  release.yaml
app/: __init__.py  acestep_runner.py  audio_processing.py  demucs_runner.py  job_queue.py  main.py  models.py  musicgen.py  quality_metrics.py  soundtrack.py
deploy/kubernetes/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/terraform/: README.md  main.tf  terraform.tfvars.example
deploy/terraform/modules/musicgen-api/: ingress.tf  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: test_soundtrack.py
stubs/xformers/: __init__.py  ops.py  profiler.py
tests/: test_api.py
tests/e2e/: __init__.py  config.py  conftest.py  smoke_test.py  test_generate.py  test_separate.py  test_soundtrack.py
