[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicgen-api"
version = "1.0.3"
description = "AI Music Generation and Stem Separation API using MusicGen and Demucs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sam Dumont" }
]
keywords = ["musicgen", "demucs", "audio", "ai", "music-generation", "stem-separation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML - pinned for compatibility
    "torch==2.1.0",
    "torchaudio==2.1.0",

    # Audio processing
    "scipy>=1.11.0",
    "numpy<2.0.0",
    "librosa>=0.10.0",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Data validation
    "pydantic>=2.5.0",

    # Monitoring
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
# AudioCraft for MusicGen
# Note: On macOS, xformers is not available - audiocraft works without it but slower
# Using bleeding edge from git for MusicGen-Style support
musicgen = [
    "audiocraft @ git+https://github.com/facebookresearch/audiocraft.git",
]
# xformers for faster attention on Linux/CUDA (not available on macOS)
cuda = [
    "xformers>=0.0.22; sys_platform == 'linux'",
]
# Demucs for stem separation
demucs = [
    "demucs>=4.0.0",
]
# Advanced audio processing (tempo matching)
audio = [
    "pyrubberband>=0.3.0",
]
# Quality metrics and FAD evaluation
quality = [
    "fadtk>=0.1.0",
]
# Full local development (everything except CUDA-specific)
all = [
    "musicgen-api[musicgen]",
    "musicgen-api[demucs]",
    "musicgen-api[audio]",
]
# Full production (with CUDA acceleration and quality metrics)
prod = [
    "musicgen-api[musicgen]",
    "musicgen-api[demucs]",
    "musicgen-api[cuda]",
    "musicgen-api[audio]",
    "musicgen-api[quality]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "requests>=2.28",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/sam-dumont/musicgen-api"
Repository = "https://github.com/sam-dumont/musicgen-api"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Platform-specific resolution
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

# Override problematic dependencies from audiocraft
# - xformers: not available on macOS (requires CUDA)
# - av==11.0.0: incompatible with ffmpeg 8.x on macOS, use newer version
# - transformers: pin to version compatible with torch 2.1.0
override-dependencies = [
    "xformers>=0.0.22; sys_platform == 'linux'",
    "av>=12.0.0",  # Override av==11.0.0 which doesn't build with ffmpeg 8.x
    "transformers>=4.31.0,<4.40.0",  # Compatible with torch 2.1.0
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchaudio.*",
    "audiocraft.*",
    "demucs.*",
    "scipy.*",
    "librosa.*",
    "pyrubberband.*",
    "fadtk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/e2e"
