[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicgen-api"
version = "1.0.7"
description = "AI Music Generation and Stem Separation API using MusicGen and Demucs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sam Dumont" }
]
keywords = ["musicgen", "demucs", "audio", "ai", "music-generation", "stem-separation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML - pinned for compatibility
    "torch==2.8.0",
    "torchaudio==2.8.0",

    # Audio processing
    "scipy>=1.11.0",
    "numpy<2.0.0",
    "librosa>=0.10.0",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Data validation
    "pydantic>=2.5.0",

    # Monitoring
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
# AudioCraft for MusicGen
# Note: On macOS, xformers is not available - audiocraft works without it but slower
# Using bleeding edge from git for MusicGen-Style support
musicgen = [
    "audiocraft @ git+https://github.com/facebookresearch/audiocraft.git",
]
# xformers for faster attention on Linux/CUDA (not available on macOS)
cuda = [
    "xformers>=0.0.29; sys_platform == 'linux'",
]
# Demucs for stem separation
demucs = [
    "demucs>=4.0.0",
]
# Advanced audio processing (tempo matching)
audio = [
    "pyrubberband>=0.3.0",
]
# Quality metrics and FAD evaluation
quality = [
    "fadtk>=0.1.0",
]
# Full local development (everything except CUDA-specific)
all = [
    "musicgen-api[musicgen]",
    "musicgen-api[demucs]",
    "musicgen-api[audio]",
]
# Full production (with CUDA acceleration and quality metrics)
prod = [
    "musicgen-api[musicgen]",
    "musicgen-api[demucs]",
    "musicgen-api[cuda]",
    "musicgen-api[audio]",
    "musicgen-api[quality]",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "requests>=2.28",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/sam-dumont/musicgen-api"
Repository = "https://github.com/sam-dumont/musicgen-api"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Platform-specific resolution
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

# Override problematic dependencies from audiocraft
# - xformers: not available on macOS (requires CUDA)
# - av==11.0.0: incompatible with ffmpeg 8.x on macOS, use newer version
# - torch/torchaudio: override audiocraft's torch==2.1.0 pin
# - transformers: upgrade to fix security vulnerabilities
# - torchvision/torchtext: override audiocraft's pins to match torch 2.8.0
override-dependencies = [
    "xformers>=0.0.29; sys_platform == 'linux'",
    "av>=12.0.0",  # Override av==11.0.0 which doesn't build with ffmpeg 8.x
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers>=4.53.0",
    "torchvision>=0.23.0",  # Override audiocraft's torchvision==0.16.0
    "wheel>=0.46.2",  # Fix CVE path traversal in wheel unpack
    "spacy>=3.8.0",  # Override audiocraft's yanked spacy==3.7.6
    "torchtext>=0.16.0; sys_platform == 'never'",  # Discontinued, no py3.12 wheels, audiocraft never imports it
    "llvmlite>=0.42.0",  # 0.41.x doesn't build on Python 3.12
    "numba>=0.59.0",  # 0.58.x doesn't support Python 3.12
]

# Use the CUDA 12.6 PyTorch index on Linux.
# The default PyPI wheel is cu128 which drops sm_60/sm_61 (Pascal) support.
# cu126 includes sm_50/sm_60 so GTX 1070 and similar cards still work.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchaudio.*",
    "audiocraft.*",
    "demucs.*",
    "scipy.*",
    "librosa.*",
    "pyrubberband.*",
    "fadtk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/e2e"
